--- a/index.html
+++ b/index.html
@@ -79,11 +79,15 @@
       <div class="operation operation--transfer">
         <h2>Transfer money</h2>
         <form class="form form--transfer">
-          <input type="text" class="form__input form__input--to" />
-          <input type="number" class="form__input form__input--amount" />
+          <input type="text" class="form__input form__input--to" id="to" />
+          <input
+            type="number"
+            class="form__input form__input--amount"
+            id="amount"
+          />
           <button class="form__btn form__btn--transfer">&rarr;</button>
-          <label class="form__label">Transfer to</label>
-          <label class="form__label">Amount</label>
+          <label class="form__label" for="to">Transfer to</label>
+          <label class="form__label" for="amount">Amount</label>
         </form>
       </div>
 
@@ -91,9 +95,15 @@
       <div class="operation operation--loan">
         <h2>Request loan</h2>
         <form class="form form--loan">
-          <input type="number" class="form__input form__input--loan-amount" />
+          <input
+            type="number"
+            class="form__input form__input--loan-amount"
+            id="loan-amount"
+          />
           <button class="form__btn form__btn--loan">&rarr;</button>
-          <label class="form__label form__label--loan">Amount</label>
+          <label class="form__label form__label--loan" for="loan-amount"
+            >Amount</label
+          >
         </form>
       </div>
 
@@ -101,15 +111,16 @@
       <div class="operation operation--close">
         <h2>Close account</h2>
         <form class="form form--close">
-          <input type="text" class="form__input form__input--user" />
+          <input type="text" class="form__input form__input--user" id="user" />
           <input
             type="password"
             maxlength="6"
             class="form__input form__input--pin"
+            id="pin"
           />
           <button class="form__btn form__btn--close">&rarr;</button>
-          <label class="form__label">Confirm user</label>
-          <label class="form__label">Confirm PIN</label>
+          <label class="form__label" for="user">Confirm user</label>
+          <label class="form__label" for="pin">Confirm PIN</label>
         </form>
       </div>
 
